--- a/date.html
+++ b/date.html
@@ -14,6 +14,13 @@
             rel="stylesheet"
         />
         <style>
+            * {
+                -webkit-user-select: none;  
+                -moz-user-select: none;    
+                -ms-user-select: none;      
+                user-select: none;
+            }
+
             #lbl {
                 display: flex;
                 font-family: "Poppins", sans-serif;
